MODBULKOPS-658 Fixed null/empty